--- a/style.css
+++ b/style.css
@@ -261,6 +261,10 @@ img {
     flex: 0 0 58.33333%;
     max-width: 58.33333%;
   }
+  .col-sm-9 {
+    flex: 0 0 75%;
+    max-width: 75%;
+  }
   .col-sm-12 {
     flex: 0 0 100%;
     max-width: 100%;
@@ -541,15 +545,16 @@ h3 {
   padding-bottom: 17px;
 }
 .tabs {
-  width: 984px;
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 70px;
 }
 .tabs > div {
-  position: relative;
+  /* position: relative;*/
   overflow: hidden;
 }
 .tabs .tab-content {
   background: url(../images/bg.jpg) 0 0 repeat;
-  width: 744px;
 }
 .tabs ul.nav {
   list-style-image: none;
@@ -578,13 +583,28 @@ h3 {
   text-decoration: none;
 }
 
-.tabs-2 {
-  margin: 35px 0 0 0 !important;
-  width: 580px !important;
+.portfolio {
+  display: flex;
 }
-.tabs-2 ul.nav {
-  padding: 0 0 0 85px !important;
+.Categories {
+  position: fixed;
+  top: 150px;
 }
-.tabs-2 .tab-content {
-  padding: 61px 0 0 0 !important;
+.tab-content {
+  flex-wrap: wrap;
+}
+.gallery-photo {
+  top: 70px;
+}
+.content-portfolio {
+  position: relative;
+}
+.list-1 {
+  color: #dde1e4;
+}
+#tab-1,
+#tab-2,
+#tab-3,
+#tab-4 {
+  position: relative;
 }
